--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-vendor*
-vendor/bin/psysh.bat
+/node_modules
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+Homestead.json
+Homestead.yaml
+.env
