--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+storage/logs/laravel.log
+storage/debugbar/X1f16b4b0614872d5c6b20ec7ece22a36.json
+storage/debugbar/X5583d3aff583c484af3fd5102d86b0b6.json
